# hlk-ld2410c

./: CMakeLists.txt  CMakeLists.txt.bak  Doxyfile  LICENSE  README.md
example/: CMakeLists.txt  testrun.cpp  testrun.h
src/: CMakeLists.txt  hlkld2410.cpp  hlkld2410.h  main.cpp  testrun.cpp  testrun.h
